--- a/class-components/src/App.css
+++ b/class-components/src/App.css
@@ -40,3 +40,20 @@
 .read-the-docs {
   color: #888;
 }
+
+.search-items {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.search-item {
+  width: 200px;
+  border: 1px solid rgb(188, 186, 186);
+}
+
+.stats {
+  display: flex;
+  justify-content: space-between;
+  margin-left: 20px;
+  margin-right: 20px;
+}
