--- a/class-components/src/index.css
+++ b/class-components/src/index.css
@@ -78,7 +78,6 @@ button:focus-visible {
 
 .item-details {
   width: 100%;
-  
 }
 
 .search-items {
@@ -98,4 +97,31 @@ button:focus-visible {
 
 .search-item-container {
   border: 1px solid gray;
+}
+
+.dashboard {
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  margin-left: auto;
+  width: 40vw;
+  background-color: rgba(227, 227, 227, 0.87);
+  display: flex;
+  gap: 20px;
+  justify-content: center;
+  padding: 10px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+
+
+.selected-items-counter {
+  width: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid red;
+  border-radius: 100%;
+  background-color: red;
+  font-size: 20px;
 }
