--- a/class-components/src/index.css
+++ b/class-components/src/index.css
@@ -76,6 +76,10 @@ button:focus-visible {
   display: flex;
   flex-direction: column;
   width: 400px;
+  border: 1px solid #f9f9f9;
+  padding: 20px;
+  margin-top: 20px;
+  box-shadow: 0px 10px 22px 3px rgba(0,0,0,0.75);
 }
 
 .form-field {
