feat: add styles

--- a/class-components/src/index.css
+++ b/class-components/src/index.css
@@ -102,3 +102,23 @@ button:focus-visible {
 .input-number::-webkit-inner-spin-button {
     -webkit-appearance: none;
 }
+
+input {
+  padding:0.5rem;
+  border-radius:.5rem;
+  border: 1px solid grey;
+
+}
+
+label {
+  margin-bottom: 15px;
+}
+
+.terms {
+  display: flex; 
+  flex-direction: row;
+  gap: 10px;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
