--- a/class-components/src/index.css
+++ b/class-components/src/index.css
@@ -135,9 +135,13 @@ label {
   box-shadow: 0px 10px 22px 3px rgba(0,0,0,0.75);
 }
 
+.form-item_new {
+  box-shadow: 0px 10px 22px 3px rgba(111, 243, 142, 0.75);
+}
+
 .forms {
   display: flex;
-  flex-direction: row;
+  flex-direction: reverse;
   flex-wrap: wrap;
   gap: 30px;
   justify-content: center;
