--- a/class-components/src/index.css
+++ b/class-components/src/index.css
@@ -79,7 +79,7 @@ button:focus-visible {
   border: 1px solid #f9f9f9;
   padding: 20px;
   margin-top: 20px;
-  box-shadow: 0px 10px 22px 3px rgba(0,0,0,0.75);
+  box-shadow: 0px 10px 22px 3px rgba(0, 0, 0, 0.75);
 }
 
 .form-field {
@@ -100,14 +100,13 @@ button:focus-visible {
 
 .input-number::-webkit-outer-spin-button,
 .input-number::-webkit-inner-spin-button {
-    -webkit-appearance: none;
+  -webkit-appearance: none;
 }
 
 input {
-  padding:0.5rem;
-  border-radius:.5rem;
+  padding: 0.5rem;
+  border-radius: 0.5rem;
   border: 1px solid grey;
-
 }
 
 label {
@@ -115,7 +114,7 @@ label {
 }
 
 .terms {
-  display: flex; 
+  display: flex;
   flex-direction: row;
   gap: 10px;
   justify-content: center;
@@ -132,7 +131,7 @@ label {
   width: 200px;
   border: 1px solid #f9f9f9;
   padding: 10px;
-  box-shadow: 0px 10px 22px 3px rgba(0,0,0,0.75);
+  box-shadow: 0px 10px 22px 3px rgba(0, 0, 0, 0.75);
 }
 
 .form-item_new {
@@ -155,4 +154,54 @@ label {
   display: flex;
   gap: 20px;
   justify-content: center;
+}
+
+.gender-container {
+  display: flex;
+  justify-content: center;
+  gap: 40px;
+}
+
+.gender-item {
+   display: flex;
+  gap: 10px;
+  text-align: center;
+  height: 30px;
+}
+
+.gender-label {
+  margin: 0;
+}
+
+.gender-input{
+  vertical-align:middle;
+  margin:-5px 0 0 0;
+}
+.gender-fieldset {
+  border: none;
+}
+
+.accept-input {
+  vertical-align:middle;
+  margin:-12px 0 0 0;
+}
+
+
+.file-input::-webkit-file-upload-button {
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: #1a1a1a;
+  cursor: pointer;
+  transition: border-color 0.25s;
+}
+.file-input::-webkit-file-upload-button:hover {
+  border-color: #646cff;
+}
+.file-input::-webkit-file-upload-button:focus,
+.file-input::-webkit-file-upload-button:focus-visible {
+  outline: 4px auto -webkit-focus-ring-color;
 }
